<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/location"/>

        <item
            android:id="@+id/logout"
            android:onClick="signOut"
            android:title="@string/logout"/>

        <item
            android:id="@+id/login"
            android:onClick="signOut"
            android:title="@string/LogIn">

        </item>
    </group>
</menu>
